<resources>
    <string name="app_name">MinPlayer</string>
    <string name="unknown_song_title">Unknown</string>
    <string name="unknown_song_album">Unknown Album</string>
    <string name="unknown_song_artist">Unknown Artist</string>
    <string name="create_playlist">Create new playlist</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_next_queue">Add to next queue</string>
    <string name="choose_playlist">Choose playlist</string>
    <string name="audio_was_added_to">Audio was added to</string>
    <string name="title_activity_playlist">PlaylistActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="all_tracks_playlist">All Tracks</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="playlists">Playlists</string>
    <string name="settings">Settings</string>
    <string name="options">Options</string>
    <string name="player">Player</string>
    <string name="playlist_name">Playlist name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="about_short">Made with 💜</string>
    <string name="created_by">by Ivan Root</string>
    <string name="visualizer">Visualizer</string>
    <string name="remove_playlist">Remove</string>
    <string name="remove_playlist_question">Remove this playlist?</string>
    <string name="title_activity_startup">StartupActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="playlist_cannot_be_empty">Playlist cannot be empty!</string>
    <string name="playlist_name_cannot_be_empty">Playlist name cannot be empty!</string>
    <string name="songs">Songs</string>
    <string name="appearance">Appearance</string>
    <string name="night_mode">Night Mode</string>
    <string name="night_mode_summary">Try it!</string>
    <string name="yandex_disk">Yandex.Disk</string>
    <string name="advanced">Advanced</string>
    <string name="downloading_from_disk">Downloading</string>
    <string name="download_completed">Downloaded</string>
    <string name="download_canceled">Canceled</string>
    <string name="all_tracks_downloaded">All tracks successfully downloaded!</string>
    <string name="upload_to_disk">Upload to Yandex.Disk</string>
    <string name="uploading_to_disk">Uploading</string>
    <string name="upload_completed">Uploaded</string>
    <string name="upload_canceled">Canceled</string>
    <string name="all_tracks_uploaded">All tracks successfully uploaded!</string>
    <string name="no_internet_connection">No internet Ccnnection!</string>
    <string name="waiting_for_internet_connection">Waiting for internet connection</string>
    <string name="disk_login_error">Disk Login Error!</string>
    <string name="wave_in">Wave In</string>
    <string name="horizon">Horizon</string>
    <string name="horizon_wallpaper">Horizon Wallpaper</string>
    <string name="wave_in_wallpaper">Wave In Wallpaper</string>
    <string name="wave_in_summary">Amazing waves by Cleveroad.</string>
    <string name="horizon_summary">Nice visualization by Yalantis.</string>
    <string name="colors">Colors</string>
    <string name="layer_1_color">Layer 1</string>
    <string name="layer_2_color">Layer 2</string>
    <string name="layer_3_color">Layer 3</string>
    <string name="background_color">Background </string>
    <string name="choose_layer_1_color">Choose layer 1 color</string>
    <string name="choose_layer_2_color">Choose layer 2 color</string>
    <string name="choose_layer_3_color">Choose layer 3 color</string>
    <string name="choose_background_color">Choose background color</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="frame_update_ms">Frame update time in ms.</string>
    <string name="label_search">Search…</string>
    <string name="tracks">Tracks</string>
    <string name="modify">Modify</string>
    <string name="playlist_already_exists">Playlist with such name already exists!</string>

    <plurals name="song_plurals">
        <item quantity="zero">No songs</item>
        <item quantity="one">%1$d song</item>
        <item quantity="other">%1$d songs</item>
    </plurals>

</resources>
