<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/colors">

        <com.flask.colorpicker.ColorPickerPreference
            android:title="@string/background_color"
            android:key="wave_in_background_color"
            android:defaultValue="@color/colorWaveInBgDefault"
            app:initialColor="@color/colorWaveInBgDefault"
            app:pickerTitle="@string/choose_background_color"
            app:alphaSlider="true"
            app:lightnessSlider="true"
            app:wheelType="CIRCLE"/>

        <com.flask.colorpicker.ColorPickerPreference
            android:title="@string/layer_1_color"
            android:key="wave_in_layer_1_color"
            android:defaultValue="@color/colorWaveInLayer1Default"
            app:initialColor="@color/colorWaveInLayer1Default"
            app:pickerTitle="@string/choose_layer_1_color"
            app:alphaSlider="true"
            app:lightnessSlider="true"
            app:wheelType="CIRCLE"/>

        <com.flask.colorpicker.ColorPickerPreference
            android:title="@string/layer_2_color"
            android:key="wave_in_layer_2_color"
            android:defaultValue="@color/colorWaveInLayer2Default"
            app:initialColor="@color/colorWaveInLayer2Default"
            app:pickerTitle="@string/choose_layer_2_color"
            app:alphaSlider="true"
            app:lightnessSlider="true"
            app:wheelType="CIRCLE"/>

        <com.flask.colorpicker.ColorPickerPreference
            android:title="@string/layer_3_color"
            android:key="wave_in_layer_3_color"
            android:defaultValue="@color/colorWaveInLayer3Default"
            app:initialColor="@color/colorWaveInLayer3Default"
            app:pickerTitle="@string/choose_layer_3_color"
            app:alphaSlider="true"
            app:lightnessSlider="true"
            app:wheelType="CIRCLE"/>

    </PreferenceCategory>
</PreferenceScreen>