<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/player">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/all_audio"
                android:checkable="true"
                android:icon="@drawable/ic_music"
                android:title="@string/all_tracks_playlist" />
            <item
                android:id="@+id/playlists"
                android:checkable="true"
                android:icon="@drawable/ic_playlist"
                android:title="@string/playlists" />
            <item
                android:id="@+id/disk"
                android:checkable="true"
                android:icon="@drawable/ic_yandex_disk"
                android:title="@string/yandex_disk" />
        </menu>
    </item>
    <item android:title="@string/advanced">
        <menu>
            <item
                android:id="@+id/visualizer"
                android:checkable="true"
                android:icon="@drawable/ic_spectrum"
                android:title="@string/visualizer"
                android:visible="false" />
            <item
                android:id="@+id/settings"
                android:checkable="false"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
