<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_playlist"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_playlistName"
        android:layout_below="@id/dialogTitle"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/playlistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/playlist_name" />
    </android.support.design.widget.TextInputLayout>

    <ListView
        android:id="@+id/audioList"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/layout_playlistName">

    </ListView>

    <Button
        android:id="@+id/cancelBtn"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/audioList"
        android:textColor="?android:attr/colorAccent"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginStart="10dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/okBtn"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/audioList"
        android:textColor="?android:attr/colorAccent"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginEnd="10dp"
        android:text="@string/ok" />
</RelativeLayout>